# poc10

./: .env.example  .gitignore  README.md  api_models.py  api_server.py  constants.py  demo.py  docker-compose.yml  gradio_app.py  install.sh  model_worker.py  pyproject.toml  requirements.txt  requirements2poetry.sh
docker/: Dockerfile
frontend/: .env.example  README.md  config.js  index.html  server.py  streamlit_app.py
hy3dpaint/DifferentiableRenderer/: compile_mesh_painter.sh
